fixed layout bug, footer/main margin defaults

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,7 @@
 
 .footer {
   background-color: var(--medPink);
+  margin-bottom: 0 !important;
 }
 
 .footer * {
